packages/core/nros-platform-cffi/include/nros/platform.h

#ifndef NROS_PLATFORM_H
#define NROS_PLATFORM_H

#include <stdint.h>
#include <stddef.h>

#ifdef __cplusplus
extern "C" {
#endif

/**
 * @file platform.h
 * @brief Canonical C ABI for the nros platform abstraction.
 *
 * A platform implementor supplies the symbols declared in this header.
 * Every nros binary links exactly one platform implementation; resolution
 * is performed at link time. There is no runtime registration step.
 *
 * Implementations may be written in any language with a C ABI. For Rust
 * platform crates, a sibling `-cffi` shim crate re-exports the Rust impl
 * as `#[unsafe(no_mangle)] extern "C"` symbols matching the names below.
 *
 * Companion to the Phase 117 canonical-C-ABI RMW vtable
 * (`<nros/rmw_vtable.h>`); the platform layer sits one tier below RMW.
 *
 * # Return-value conventions
 *
 *  - `int8_t` returns: `0` = success, non-zero = error.
 *  - Pointer returns: `NULL` = allocation failure or not-implemented;
 *    non-`NULL` is the resource handle.
 *  - `clock_*` / `time_*` returns are absolute / monotonic counters and
 *    never error. If the platform has no clock, return `0`.
 *
 * # Threading
 *
 * All symbols must be safe to invoke from any thread.
 * `mutex_*` / `condvar_*` must be safe under concurrent callers.
 * `mutex_rec_*` must support same-thread re-entry (zenoh-pico
 * re-enters the same mutex).
 *
 * RTOS yields (`yield_now`) are **not** ISR-safe. Bare-metal yields
 * built on `core::hint::spin_loop()` are.
 */

/* ---- Return codes ---- */

typedef int32_t nros_platform_ret_t;

/** Operation completed successfully. */
#define NROS_PLATFORM_RET_OK              ((nros_platform_ret_t) 0)
/** Generic failure not covered by a more specific code. */
#define NROS_PLATFORM_RET_ERROR           ((nros_platform_ret_t) -1)
/** The platform does not implement this operation. */
#define NROS_PLATFORM_RET_UNSUPPORTED     ((nros_platform_ret_t) -5)

/* ---- Clock (monotonic) ---- */

/** Monotonic milliseconds since a platform-defined epoch (boot, program
 *  start, …). Never decreases. Wraps after ~584 million years. */
uint64_t nros_platform_clock_ms(void);

/** Monotonic microseconds since the same epoch as `nros_platform_clock_ms`.
 *  Used for fine-grained spin / wait deadlines. */
uint64_t nros_platform_clock_us(void);

/* ---- Allocation ---- */

/** Allocate `size` bytes; return `NULL` on failure. May be called from
 *  any thread. */
void *nros_platform_alloc(size_t size);

/** Resize the block at `ptr` to `size` bytes. Equivalent to libc
 *  `realloc`: `NULL` ptr → fresh alloc; `0` size → free + return `NULL`.
 *  Preserves contents up to `min(old, new)`. */
void *nros_platform_realloc(void *ptr, size_t size);

/** Free a previously allocated block. `NULL` is a no-op. */
void nros_platform_dealloc(void *ptr);

/* ---- Sleep ---- */

/** Sleep at least `us` microseconds. Spin if the platform clock has no
 *  sub-millisecond timer. */
void nros_platform_sleep_us(size_t us);

/** Sleep at least `ms` milliseconds. */
void nros_platform_sleep_ms(size_t ms);

/** Sleep at least `s` seconds. */
void nros_platform_sleep_s(size_t s);

/* ---- Cooperative yield ---- */

/** Voluntarily yield the current task / thread. On bare-metal,
 *  `core::hint::spin_loop()` is acceptable; on RTOSes use the native
 *  cooperative-yield primitive (`k_yield`, `vPortYield`,
 *  `tx_thread_relinquish`, `sched_yield`, …). RTOS yields are **not**
 *  ISR-safe. */
void nros_platform_yield_now(void);

/* ---- Random ---- */

/** Random `u8`. Cryptographically random where the platform has an
 *  entropy source; otherwise a seeded PRNG. Must be deterministic
 *  within a single test session for reproducibility. */
uint8_t  nros_platform_random_u8(void);
/** Random `u16`. See `random_u8` notes. */
uint16_t nros_platform_random_u16(void);
/** Random `u32`. See `random_u8` notes. */
uint32_t nros_platform_random_u32(void);
/** Random `u64`. See `random_u8` notes. */
uint64_t nros_platform_random_u64(void);
/** Fill `len` bytes at `buf` with random data. */
void     nros_platform_random_fill(void *buf, size_t len);

/* ---- Wall clock ---- */

/** Wall-clock milliseconds since the Unix epoch, or `0` if the platform
 *  has no real-time clock. */
uint64_t nros_platform_time_now_ms(void);

/** Whole seconds since the Unix epoch (truncated `time_now_ms`). */
uint32_t nros_platform_time_since_epoch_secs(void);

/** Sub-second nanosecond component of the wall clock (`0..1e9`). */
uint32_t nros_platform_time_since_epoch_nanos(void);

/* ---- Threading: tasks ---- */

/** Spawn a new task. `task` is opaque caller-provided storage (size
 *  determined by the implementor); `attr` carries scheduling hints
 *  (priority, stack size, …) or is `NULL` for defaults; `entry` is the
 *  task entry point; `arg` is forwarded to `entry`. Returns `0` on
 *  success, non-zero on failure. */
int8_t nros_platform_task_init(void *task, void *attr,
                               void *(*entry)(void *), void *arg);

/** Block until `task` exits. Cleans up task storage on success. */
int8_t nros_platform_task_join(void *task);

/** Mark `task` as detached — its storage is reclaimed on exit without
 *  a join. */
int8_t nros_platform_task_detach(void *task);

/** Request `task` to terminate at the next cancellation point.
 *  Cooperative: a task that never reaches a cancel point will not stop. */
int8_t nros_platform_task_cancel(void *task);

/** Terminate the calling task immediately. Does not return. */
void nros_platform_task_exit(void);

/** Free task storage allocated by `task_init`. Called after `task_join`
 *  or `task_detach + exit`. */
void nros_platform_task_free(void **task);

/* ---- Threading: non-recursive mutex ---- */

int8_t nros_platform_mutex_init(void *m);
int8_t nros_platform_mutex_drop(void *m);
int8_t nros_platform_mutex_lock(void *m);
int8_t nros_platform_mutex_try_lock(void *m);
int8_t nros_platform_mutex_unlock(void *m);

/* ---- Threading: recursive mutex ---- */

/** Initialise a recursive mutex (same-thread re-entry permitted).
 *  Required by zenoh-pico. */
int8_t nros_platform_mutex_rec_init(void *m);
int8_t nros_platform_mutex_rec_drop(void *m);
int8_t nros_platform_mutex_rec_lock(void *m);
int8_t nros_platform_mutex_rec_try_lock(void *m);
int8_t nros_platform_mutex_rec_unlock(void *m);

/* ---- Threading: condition variables ---- */

int8_t nros_platform_condvar_init(void *cv);
int8_t nros_platform_condvar_drop(void *cv);
int8_t nros_platform_condvar_signal(void *cv);
int8_t nros_platform_condvar_signal_all(void *cv);

/** Phase 124.B.7.a — ISR-safe signal.
 *
 *  Callable from interrupt context. `nros_platform_condvar_signal`
 *  is NOT ISR-safe on every platform (POSIX `pthread_cond_signal`
 *  isn't on the async-signal-safe function list; RTOS condvar
 *  primitives often require thread context). Backends MUST use
 *  this variant when triggering from an ISR or POSIX signal handler.
 *
 *  Per-platform implementation:
 *  * POSIX: `eventfd`/`pipe` write — async-signal-safe; a runtime
 *    worker thread forwards to the underlying condvar.
 *  * Zephyr: `k_sem_give` on the wake semaphore (ISR-safe).
 *  * FreeRTOS: `xSemaphoreGiveFromISR` + `portYIELD_FROM_ISR` on
 *    the wake semaphore.
 *  * NuttX: `sem_post` (POSIX-safe under NuttX) on the wake sem.
 *  * ThreadX: `tx_event_flags_set` on the wake event flag group
 *    (ISR-safe).
 *  * Bare-metal: atomic flag store + `__SEV()` (Cortex-M).
 *
 *  Returns non-zero on error (e.g. ISR-unsafe call on a backend
 *  that mandates ISR-context-only via a separate primitive).
 *  Backends without an ISR-safe path return non-zero so callers
 *  can fall back to thread-context signal (with the obvious
 *  latency cost). */
int8_t nros_platform_condvar_signal_from_isr(void *cv);

/** Atomically release `m` and block on `cv`. The mutex is re-acquired
 *  before this function returns. */
int8_t nros_platform_condvar_wait(void *cv, void *m);

/** Like `condvar_wait`, but with an absolute monotonic deadline (in
 *  `clock_ms` units). Returns non-zero on timeout. */
int8_t nros_platform_condvar_wait_until(void *cv, void *m, uint64_t abstime);

/* ---- Threading: wake primitive (Phase 130) ----
 *
 * Binary-semaphore-shaped primitive used by the executor's wake_flag /
 * spin_once cv-wait pair. Separate from `nros_platform_condvar_*` so
 * the executor doesn't inherit zenoh-pico's pthread-shaped Zephyr
 * ABI (which on libc hangs past `pthread_cond_timedwait` deadlines).
 *
 * Per-platform impl:
 *  * POSIX:    `sem_t` with `sem_timedwait` (`CLOCK_MONOTONIC`).
 *  * Zephyr:   `k_sem` (kernel-native, libc-pthread-free).
 *  * FreeRTOS: `xSemaphoreCreateBinary` + `xSemaphoreGiveFromISR`.
 *  * NuttX:    POSIX `sem_t` via NuttX libc (`sem_timedwait`).
 *  * ThreadX:  `tx_semaphore` (ISR-safe `tx_semaphore_put`).
 *  * bare:     atomic flag + busy-spin against the platform clock.
 *
 * `wait_ms` returns 0 on signal, 1 on timeout, -1 on error.
 * `signal_from_isr` returns -1 if the backend has no ISR-safe path;
 * callers may fall back to `signal()` accepting the latency cost.
 * Storage is opaque to the caller; size/alignment via the probe
 * helpers below. */
int8_t  nros_platform_wake_init(void *w);
int8_t  nros_platform_wake_drop(void *w);
int8_t  nros_platform_wake_wait_ms(void *w, uint32_t timeout_ms);
int8_t  nros_platform_wake_signal(void *w);
int8_t  nros_platform_wake_signal_from_isr(void *w);

/** Opaque-storage sizing. Both helpers are pure functions (no global
 *  state) and may be called before `nros_platform_wake_init`. */
size_t  nros_platform_wake_storage_size(void);
size_t  nros_platform_wake_storage_align(void);

/* ---- Critical section ---- */
/* Phase 121.9 — global mutual exclusion against preemption + ISR
 * delivery. Backs the Rust `critical_section::Impl` registration used
 * by dust-dds, nros-rmw-{xrce,zenoh}, and any consumer of
 * `critical_section::with()`. Reentrant by contract: every acquire
 * must be paired with exactly one release, and the platform handles
 * nesting (PRIMASK already stacks; pthread side uses a recursive
 * mutex).
 *
 * The `uint32_t` token holds whatever the platform needs to restore
 * the prior posture — Cortex-M PRIMASK bit, Cortex-R CPSR I-bit,
 * RISC-V `mstatus.MIE` snapshot, pthread depth counter — and is
 * opaque to the caller. */
uint32_t nros_platform_critical_section_acquire(void);
void     nros_platform_critical_section_release(uint32_t token);

#ifdef __cplusplus
}  /* extern "C" */
#endif

#endif /* NROS_PLATFORM_H */